# luchess

./: .gitignore  CMakeLists.txt  README.md  configure.bat  run_build.sh  vcpkg.json
include/: chess.h  chess.hpp  core.h  notation.h  util.h
resources/: kasparov-vs-the-world-chessnotations.txt
src/: CMakeLists.txt  chess.cpp  core.cpp  main.cpp
src/luchess/core/: board.cpp  board.h  chess.cpp  chess.h  main.cpp  notation.cpp  notation.h  pieces.h  static.h  types.h  util.cpp  util.h
test/: CMakeLists.txt  test.cpp
